--- a/assignments/01/submission01.tex
+++ b/assignments/01/submission01.tex
@@ -7,9 +7,10 @@
 \subsection*{Charles Norden, \#011606177 }
 
 \subsection*{PROBLEM 1:}
-1. Consider a program whose sequential execution time is 100 days. Assume that the program can be parallelized and the performance scales linearly in terms of number of processors. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
+Consider a program whose sequential execution time is 100 days. Assume that the program can be parallelized and the performance scales linearly in terms of number of processors. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
 
 \hline
+
 Given the 100-day execution time, that is our upperbound for time complexity. The amount of time we can parallelize is at most equal to this time. The Speedup S is:
 
 \[ S = \frac{p}{p * t_{s} + t_{p}} \]
@@ -26,9 +27,10 @@ where \(t_{s} = 0\) days, assuming that the entirety of the program is paralleli
 
 
 \subsection*{PROBLEM 2:}
-1. Consider a program whose sequential execution time is 100 days. Assume that the program can be parallelized and the performance scales linearly in terms of number of processors. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
+Consider a program whose sequential execution time is 100 days. Part A of this program cannot be parallelized and accounts for 40\% of total execution time. Part B of this program can be linearly be parallelized and the performance scales linearly in terms of number of processors. Part B accounts for 60\% of total execution time. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
 
 \hline
+
 Given the 100-day execution time, that is our upperbound for time complexity. The amount of time we can parallelize is at most equal to \(60%\) of this amount. The Speedup S is:
 
 \[ S = \frac{p}{p * t_{s} + t_{p}} \]
@@ -45,16 +47,24 @@ where \(t_{s} = 40\) days.
 
 
 \subsection*{PROBLEM 3:}
-In this section, I want to see if the title will be pushed up further if I try to fill the page with more
-text. I certainly don't want it to occupy only the center of the page because that would be a waste of page
-estate.
+Write all data dependences in the following codes (concise representation is fine for 
+part B) (2 marks)
 
-Let's also add some mathematical equation in here to expand the size of the content:
+\hline
 
-\[ \sum_{i=1}^{N} \frac {i^2} {N} \]
+a. \(d\) is dependent on \(a\) and \(b\). \(c\) is dependent on \(a\) and \(b\).
 
-This is another equation:
+b. 
 
-\[ \lim_{x \to \infty } \frac{x^2}{log_2 x} \]
+\pagebreak
+
+
+\subsection*{PROBLEM 4:}
+Write a parallel program to add two 3-D arrays A[100][100][100] and B[100][100][100]. 
+Report the execution time for num threads = 1, 2, 4, 8, 16, and 32. How do you explain 
+the observed performance trend as a function of number of threads( a simple textual 
+explain is fine). (3 marks)
+
+\hline
 
 \end{document}
