--- a/assignments/01/submission01.tex
+++ b/assignments/01/submission01.tex
@@ -9,7 +9,7 @@
 \subsection*{PROBLEM 1:}
 Consider a program whose sequential execution time is 100 days. Assume that the program can be parallelized and the performance scales linearly in terms of number of processors. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
 
-\hline
+\noindent\rule{\textwidth}{1pt}
 
 Given that 100\% of the execution time is parallelizable, the serial time \(t_s = 0\). Thus, the Speedup S is:
 
@@ -29,7 +29,7 @@ Since \(t_p = 100\% = 1\), the speedup S is equal to and scales with the number 
 \subsection*{PROBLEM 2:}
 Consider a program whose sequential execution time is 100 days. Part A of this program cannot be parallelized and accounts for 40\% of total execution time. Part B of this program can be linearly be parallelized and the performance scales linearly in terms of number of processors. Part B accounts for 60\% of total execution time. Write an expression to compute the parallel execution time in terms of P, where P is the number of parallel processors. (1 mark)
 
-\hline
+\noindent\rule{\textwidth}{1pt}
 
 Given that only 60\% of the total execution time is parallelizable, the serial time \(t_s = 0.4\). Thus, the speedup S is:
 
@@ -52,7 +52,7 @@ Thus, parallel time \(t_p\) is as follows:
 Write all data dependences in the following codes (concise representation is fine for 
 part B) (2 marks)
 
-\hline
+\noindent\rule{\textwidth}{1pt}
 
 a. \(c\) and \(d\) are dependent on \(a\) and \(b\).
 
@@ -65,6 +65,6 @@ Report the execution time for num threads = 1, 2, 4, 8, 16, and 32. How do you e
 the observed performance trend as a function of number of threads( a simple textual 
 explain is fine). (3 marks)
 
-\hline
+\noindent\rule{\textwidth}{1pt}
 
 \end{document}
